[FIX] mail: remove useless css rule on `.o-mail-channel-member-name`
Text content overflow is already managed with `text-truncate`

--- a/addons/mail/static/src/new/discuss/channel_member_list.scss
+++ b/addons/mail/static/src/new/discuss/channel_member_list.scss
@@ -6,7 +6,3 @@
     width: $o-mail-thread-avatar-size;
     height: $o-mail-thread-avatar-size;
 }
-
-.o-mail-channel-member-name {
-    min-width: 0;
-}
